@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/gcd lcm kronecker/;
+use Math::Prime::Util::GMP qw/gcd lcm kronecker is_power/;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
 my @gcds = (
@@ -76,7 +76,7 @@ my @kroneckers = (
 );
 
 plan tests => scalar(@gcds) + scalar(@lcms) + scalar(@kroneckers)
-            + 3 + 3 + 1;
+            + 3 + 3 + 1 + 5;
 
 foreach my $garg (@gcds) {
   my($aref, $exp) = @$garg;
@@ -106,3 +106,9 @@ is( lcm("892478777297173184633","892478777297173184633"), "892478777297173184633
 is( lcm("23498324","32497832409432","328732487324","328973248732","3487234897324"), "1124956497899814324967019145509298020838481660295598696", "lcm(a,b,c,d,e)" );
 
 is( kronecker("878944444444444447324234","216539985579699669610468715172511426009"), -1, "kronecker(..., ...)" );
+
+is( is_power("18475335773296164196"), "0", "is_power(18475335773296164196) == 0" );
+is( is_power("1415842012524355766113858481287417543594447475938337587864641453047142843853822559252126433860162253504357722982805134804808530350591698526668732807053601"), "18", "is_power(322396049^18) == 18" );
+is( is_power("195820481042341245090221890868767224469265867337457650976172728836917821923718632978263135461761"), "16", "is_power(903111^16) == 16" );
+ok( is_power("195820481042341245090221890868767224469265867337457650976172728836917821923718632978263135461761",4), "is_power(903111^16,4) is true" );
+is( is_power("894311843364148115560351871258324837202590615410044436950984649"), "2", "is_power(29905047121918201644964877983907^2) == 2" );
