@@ -2,6 +2,12 @@ Revision history for Perl module Math::Prime::Util::GMP
 
 0.19 2014-03
 
+    [ADDED]
+
+    - is_power
+
+    [OTHER]
+
     - Add improved AKS parameter selection.  About 200x faster, though still
       thousands of times slower than APR-CL or ECPP.
 
